[package]
name = "gmdp"
description = "GitHub MarkDown Previewer"
version = "0.1.5"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
edition = "2018"
license = "MIT"

[dependencies]
comrak = "0.8.2"
clap = "2.33.3"
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.5"
log = "0.4.11"
env_logger = "0.7.1"
daemonize = "0.4.1"
